@@ -1,3 +1,7 @@
+2008-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tkWinWm.c: corrected some errors from the previous commit
+
 2008-10-05  Donal K. Fellows  <dkf@users.sf.net>
 
 	* win/tkWinWm.c (WmAttributesCmd, WmOverrideredirectCmd)
